force-app/main/default/objects/APTaskTemplate__c/fields/ActionPlanTemplate__c.field-meta.xml
<CustomField>
    <fullName>ActionPlanTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Action plan template from which was task created in ActionPlan. Used to identify when task from various templates are in the ActionPlan (for example when ActionPlan is generated from Contract with predefined various templates using)</description>
    <label>AP Template</label>
    <referenceTo>ActionPlanTemplate__c</referenceTo>
    <relationshipLabel>AP Tasks</relationshipLabel>
    <relationshipName>AP_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>