force-app/main/default/objects/APTaskTemplate__c/fields/APT_Task__c.field-meta.xml
<CustomField>
    <fullName>APT_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APT Task</label>
    <referenceTo>APTTaskTemplate__c</referenceTo>
    <relationshipLabel>AP Tasks</relationshipLabel>
    <relationshipName>AP_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>