force-app/main/default/objects/APTaskTemplate__c/fields/Assigned_Role__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Role__c</fullName>
    <description>Replacement field for Assigned Type. Values in custom settings.</description>
    <label>Assigned Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>