force-app/main/default/objects/APTaskTemplate__c/fields/Assigned_Type__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Type__c</fullName>
    <label>Assigned Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Autorisert regnskapsfører</fullName>
            </value>
            <value>
                <fullName>User Saksbehandler</fullName>
                <default>true</default>
                <label>User Saksbehandler</label>
            </value>
            <value>
                <fullName>Kundens kontaktperson</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>