force-app/main/default/objects/APTaskTemplate__c/fields/AttachmentHeader__c.field-meta.xml
<CustomField>
    <fullName>AttachmentHeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AttachmentHeader</label>
    <referenceTo>AttachmentHeader__c</referenceTo>
    <relationshipLabel>AP Tasks</relationshipLabel>
    <relationshipName>AP_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>