force-app/main/default/objects/APTaskTemplate__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AP Tasks</relationshipLabel>
    <relationshipName>AP_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>