force-app/main/default/objects/APTaskTemplate__c/fields/IsMandatory__c.field-meta.xml
<CustomField>
    <fullName>IsMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mandatory</label>
    <type>Checkbox</type>
</CustomField>