force-app/main/default/objects/APTaskTemplate__c/fields/IsVisible__c.field-meta.xml
<CustomField>
    <fullName>IsVisible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsVisible</label>
    <type>Checkbox</type>
</CustomField>