force-app/main/default/objects/APTaskTemplate__c/fields/Period_10__c.field-meta.xml
<CustomField>
    <fullName>Period_10__c</fullName>
    <label>Period 10</label>
    <type>Date</type>
</CustomField>