force-app/main/default/objects/APTaskTemplate__c/fields/Period_3__c.field-meta.xml
<CustomField>
    <fullName>Period_3__c</fullName>
    <label>Period 3</label>
    <type>Date</type>
</CustomField>