force-app/main/default/objects/APTaskTemplate__c/fields/Period_4__c.field-meta.xml
<CustomField>
    <fullName>Period_4__c</fullName>
    <label>Period 4</label>
    <type>Date</type>
</CustomField>