force-app/main/default/objects/APTaskTemplate__c/fields/Skip_Weekends__c.field-meta.xml
<CustomField>
    <fullName>Skip_Weekends__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Weekends</label>
    <type>Checkbox</type>
</CustomField>