force-app/main/default/objects/APTaskTemplate__c/fields/TaskId__c.field-meta.xml
<CustomField>
    <fullName>TaskId__c</fullName>
    <label>TaskId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>