force-app/main/default/objects/APTaskTemplate__c/fields/TemplateStaticPeriodDates__c.field-meta.xml
<CustomField>
    <fullName>TemplateStaticPeriodDates__c</fullName>
    <description>static periods loaded from template task when action plan created, 
does not change when date in template task is changed
semicolon separated ISO format date values f.e. ;;;;;;;2016-12-31;;;;</description>
    <label>Template Static Period Dates</label>
    <length>150</length>
    <type>Text</type>
</CustomField>