force-app/main/default/objects/APTaskTemplate__c/validationRules/User_has_to_be_active.validationRule-meta.xml
<ValidationRule>
    <fullName>User_has_to_be_active</fullName>
    <active>true</active>
    <description>Check if selected user is still active to avoid flow crash (FLOW: Sending Summary Emails to Assigned to Users and Contacts)</description>
    <errorConditionFormula>User__r.IsActive = false
&amp;&amp;
Action_Plan__r.Account_Deactivated__c = False</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>This user is inactive. Please change this user.</errorMessage>
</ValidationRule>